# pydantic-ai-errors

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-test.yml  release.yml
examples/: 01_basic.py  02_compact.py
src/pydantic_ai_errors/: __init__.py
src/pydantic_ai_errors/_internal/: api.py  diagnostics.py  renderer.py  source_map.py
src/pydantic_error_windows/: __init__.py  api.py  renderer.py
src/pydantic_error_windows/_internal/: api.py
tests/: test_api.py  test_source_map.py
